testsuite/tests/type-data/should_fail/TDNoPragma.hs
module TDNoPragma where

-- requires LANGUAGE TypeData
type data Nat = Zero | Succ Nat
